minor modifications to personalize the theme

--- a/index.html
+++ b/index.html
@@ -4,6 +4,22 @@ title: {{ site.name }}
 ---
 
 <div id="home">
+
+  <h1>Let me help you secure your financial future.</h1>
+
+  <p>
+    Tired of living pay check to pay check? Wonder where your money is going? I
+    want to be your financial coach. I only provide advice—no insurance, no
+    investments, no get rich quick schemes. Review my philosophy of coaching
+    and my credentials for being a coach (clickable links for both of these).
+    Your financial well-being is my only concern. Look at the different
+    services that I offer. Then contact me for my inexpensive pricing
+    structure. We can meet in person, by phone or through Skype to get you on
+    the road to financial freedom.
+  </p>
+
+
+
   <h1>Blog Posts</h1>
   <ul class="posts">
     {% for post in site.posts %}
