--- a/index.html
+++ b/index.html
@@ -18,6 +18,40 @@ title: {{ site.name }}
     the road to financial freedom.
   </p>
 
+  <br />
+  <br />
+  <div class="pure-g">
+    <div class="pure-u-4-24">
+    </div>
+    <div class="pure-u-16-24">
+      <blockquote>
+        You can wander into debt, but you cannot wander out.<br />
+        <cite>Dave Ramsey</cite>
+      </blockquote>
+    </div>
+    <div class="pure-u-4-24">
+    </div>
+  </div>
+  <br />
+  <br />
+
+  <div class="pure-g callouts">
+    <div class="pure-u-1-3" style="padding:10px">
+      <h3>Learn to Budget</h3>
+      <p>People who do not budget do not win.</p>
+      <img src="{{ site.baseurl }}/img/I-live-paycheck-to-paycheck.png" alt="Learn to Budge" />
+    </div>
+    <div class="pure-u-1-3" style="padding:10px">
+      <h3>Philosophy</h3>
+      <p>I do not sell any product or services. I provide advice that is unbiased.</p>
+      <img src="{{ site.baseurl }}/img/coach-2.jpg" alt="Philosophy" />
+    </div>
+    <div class="pure-u-1-3" style="padding:10px">
+      <h3>Build Wealth</h3>
+      <p>If you practice the principles I show you (the same as those taught by Dave Ramsey) you will build wealth and retire with dignity.</p>
+      <img src="{{ site.baseurl }}/img/money-1.jpg" alt="Build Wealth" />
+    </div>
+  </div>
 
 
   <h1>Blog Posts</h1>
