better nav links

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@ title: Home
     investments, no get rich quick schemes. Review my philosophy of coaching
     and my credentials for being a coach (clickable links for both of these).
     Your financial well-being is my only concern. Look at the different
-    services that I offer. Then contact me for my inexpensive pricing
-    structure. We can meet in person, by phone or through Skype to get you on
-    the road to financial freedom.
+    services that I offer. Then <a href="mailto:budgetcoachcurt@aol.com">contact me</a>
+    for my inexpensive pricing structure. We can meet in person, by phone or
+    through Skype to get you on the road to financial freedom.
   </p>
 
   <br />
