make index responsive

--- a/index.html
+++ b/index.html
@@ -36,17 +36,17 @@ title: Home
   <br />
 
   <div class="pure-g callouts">
-    <div class="pure-u-1-3" style="padding:10px">
+    <div class="pure-u-1 pure-u-md-1-3" style="padding:10px">
       <h3>Learn to Budget</h3>
       <p>People who do not budget do not win.</p>
       <img src="{{ site.baseurl }}/img/I-live-paycheck-to-paycheck.png" alt="Learn to Budge" />
     </div>
-    <div class="pure-u-1-3" style="padding:10px">
+    <div class="pure-u-1 pure-u-md-1-3" style="padding:10px">
       <h3>Philosophy</h3>
       <p>I do not sell any product or services. I provide advice that is unbiased.</p>
       <img src="{{ site.baseurl }}/img/coach-2.jpg" alt="Philosophy" />
     </div>
-    <div class="pure-u-1-3" style="padding:10px">
+    <div class="pure-u-1 pure-u-md-1-3" style="padding:10px">
       <h3>Build Wealth</h3>
       <p>If you practice the principles I show you (the same as those taught by Dave Ramsey) you will build wealth and retire with dignity.</p>
       <img src="{{ site.baseurl }}/img/money-1.jpg" alt="Build Wealth" />
