--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ title: Home
     and my credentials for being a coach (clickable links for both of these).
     Your financial well-being is my only concern. Look at the different
     services that I offer. Then <a href="mailto:budgetcoachcurt@aol.com">contact me</a>
-    for my inexpensive pricing structure. We can meet in person, by phone or
+    for my pricing structure. We can meet in person, by phone or
     through Skype to get you on the road to financial freedom.
   </p>
 
