--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ title: Home
     Tired of living pay check to pay check? Wonder where your money is going? I
     want to be your financial coach. I only provide advice—no insurance, no
     investments, no get rich quick schemes. Review my philosophy of coaching
-    and my credentials for being a coach (clickable links for both of these).
+    and my credentials for being a coach.
     Your financial well-being is my only concern. Look at the different
     services that I offer. Then <a href="mailto:budgetcoachcurt@aol.com">contact me</a>
     for my pricing structure. We can meet in person, by phone or
